--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 body {
 	background: url('stars.gif');
 }
+
+header#logo {
+	padding-left: 15%;
+	padding-right: 15%;
+}
+
+header#logo img {
+	max-width: 100%;
+}
