--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 body {
 	background: url('stars.gif');
+	color: white;
+	padding: 0px 10%;
+	font-family: sans-serif;
 }
 
 header#logo {
-	padding-left: 15%;
-	padding-right: 15%;
+	padding-left: 5%;
+	padding-right: 5%;
 }
 
 header#logo img {
